[FIX] l10n_de: DIN5008: add margin between top edge and image below
Currently there is no margin between the top edge and the image below
in the DIN5008 layout.
Thus the image may be cut off when printing the page.

This commit adds a 10mm margin.

opw-3599133

closes odoo/odoo#143924

X-original-commit: 23e6f7c0f8b793d4aa30df8a65b29def516ecb87

--- a/addons/l10n_din5008/static/src/scss/report_din5008.scss
+++ b/addons/l10n_din5008/static/src/scss/report_din5008.scss
@@ -15,6 +15,7 @@
                 margin-bottom: -10mm;
             }
             img {
+                margin-top: 10mm;
                 float: right;
             }
         }
